# Local_AI_Langchain_Platform

./: .claudeignore  .env  .env.example  .gitignore  AGENT_SYSTEM_REDESIGN_PROMPT.md  AI_EDIT_BUGFIX_PROMPT.md  AI_EDIT_UPGRADE_PROMPT.md  CLAUDE.md  CUsersalij1kontext_diff.txt  EDITOR_AUDIT_PROMPT.md  IMAGE_EDITOR_PROMPT.md  IMAGE_GEN_AUDIT.md  IMAGE_PROCESSING_RESEARCH_REPORT.md  INSTALL.md  KONTEXT_PIPELINE.md  MIGRATION_GUIDE.md  README.md  STREAMING_VOICE_PROMPT.md  api_server.py  app.py  example_usage.py  pyproject.toml  requirements-perf.txt  requirements.txt  setup.bat  setup.sh
.claude/: launch.json  settings.local.json
data/: app.db
data/luts/: bleach_bypass.cube  cinematic.cube  noir.cube  teal_orange.cube  vintage_film.cube
data/registries/: instruct_models.json  voices.json
data/registries/schemas/: instruct_models.schema.json  presets.schema.json  voices.schema.json
data/traces/: 0c8f9390-7581-4228-b485-fc187c964f2f.json  11600e25-3502-45bd-b2fa-e5af8123853a.json  15ad55fa-63e4-4a22-a040-354c026dc617.json  20fc1f2d-232a-4cc3-ae3f-75e50548365f.json  216a8c07-3b03-47bf-9242-aa3b2646405e.json  21af1c41-4bdd-4fa0-8baa-d23896f5ab5d.json  21b37a52-21eb-4ff0-bba4-3d2199f13045.json  24862b7b-281f-4d4f-b5f7-59ffab91aae3.json  258cecf7-ce51-45f8-9cd1-ebb81a88248a.json  27694ab8-0651-499c-91f6-915736922b42.json  2bc8d7f1-cf9e-4dd1-8b32-adaf6dd216c1.json  2ced9090-8b11-445c-8b1e-71e6ac87ed34.json  2e78b142-7e35-4042-bbb4-e1604d641b77.json  3422ec76-a646-4b2d-93e7-53830890fe9c.json  37b4f37b-4274-442f-8873-3917936e96fb.json  3d69e1c8-5066-450d-90db-7d8500cdc7bf.json  3f223c51-5713-4829-8bd6-4bf83b12fef4.json  42865aaa-d3d2-4b72-8775-312c0baa00ce.json  44c119cb-3d79-43b2-a408-e9cb1d946b4a.json  4fae8a8d-2d72-49af-9b98-4fbc596994d8.json  51430bf3-ab9b-4817-b10a-1e2032d88b8a.json  51f156d7-fbc1-4ad1-856f-76091cd63719.json  5641cfd1-9930-4285-9812-dbdd482a8a10.json  5d0a417b-ef92-4fc7-bae6-afc55d512db5.json  66ce83c4-1fb9-45a6-851b-b0ca8b0b83eb.json  68e2714f-af6a-49b5-a7ef-646fec1fe145.json  691b23a8-76c9-4a56-985c-ddf10c4aa413.json  69a65c85-4d05-4ae9-8041-a50f629d9d74.json  6ef89534-ade7-4dec-846f-906188e1f227.json  71db8fa8-3701-4b82-9fc3-560a8ab630cb.json  7ffa0ffc-305c-419d-8581-de73c60c8209.json  9175a6bd-47cb-41fa-b789-80181405b100.json  92499804-521a-469a-a603-4324cf812a89.json  96434e80-093e-4c41-a555-29266cd57de8.json  9ef5fa41-027d-42ff-aa0d-eb4e1eafdf56.json  a416caf5-70fc-4141-bd3c-749f928cc723.json  c797d0dd-634e-4f7a-bcc0-251a73d892c3.json  cabc22f9-2a7d-4fa7-8784-9edbfb85205c.json  cb4759f8-c8bb-4b1d-a092-3afcbfb16cb0.json  cf40ee33-9c5e-4bbc-8b9d-2d58d31b7e3f.json  (+5 more)
docs/features/: 01-architecture.md  02-llm-infrastructure.md  03-chat.md  04-agents-tools.md  05-systems.md  06-image-generation.md  07-image-editor.md  08-partner.md  09-observability.md  10-improvements.md  11-open-questions-integrated-plan.md  12-execution-plan.md  README.md
flutter_client/: README.md  pubspec.yaml
flutter_client/lib/: main.dart
flutter_client/lib/app/: studio_app.dart  studio_shell.dart
flutter_client/lib/models/: catalog_model.dart  studio_models.dart
flutter_client/lib/pages/: agents_page.dart  chat_page.dart  editor_page.dart  images_page.dart  models_page.dart  partner_import_page.dart  partner_page.dart  prompt_builder_page.dart  runs_page.dart  systems_page.dart  tools_page.dart
flutter_client/lib/services/: api_client.dart  studio_api.dart
flutter_client/lib/widgets/: attachment_widgets.dart  avatar_widget.dart  dag_lint_panel.dart  decay_preset_picker.dart  partner_export_button.dart  per_row_diff_overlay.dart  scope_multi_select.dart  tile_mode_badge.dart  tile_size_override_field.dart  tile_stride_override_field.dart
flutter_client/linux/: CMakeLists.txt
flutter_client/linux/runner/: my_application.cc
flutter_client/macos/Runner.xcodeproj/: project.pbxproj
flutter_client/test/: widget_test.dart
flutter_client/test/widgets/: dag_lint_panel_test.dart  decay_preset_picker_test.dart  partner_export_button_test.dart  partner_import_helpers_test.dart  partner_tts_mini_wav_test.dart  per_row_diff_overlay_test.dart  scope_multi_select_test.dart  tile_mode_badge_test.dart  tile_size_override_field_test.dart  tile_stride_override_field_test.dart
flutter_client/windows/: CMakeLists.txt
flutter_client/windows/flutter/: CMakeLists.txt
scripts/: chatterbox_server.py  setup_optimized.py
src/local_ai_langchain_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/local_ai_platform/: CLAUDE_MODELS.md  CLAUDE_SYSTEMS.md  __init__.py  agents.py  config.py  db.py  formatting.py  http_client.py  huggingface.py  lmstudio.py  memory.py  observability.py  observability_events.py  ollama.py  otel.py  registries.py  system_info.py  system_templates.py  systems_validator.py  tasks.py  token_counting.py  tools.py  tracing.py
static/avatar/: index.html
tests/: __init__.py  _lint_helpers.py  conftest.py  test_accelerate_probe.py  test_agents.py  test_agents_from_template_rename.py  test_agents_validation_audit.py  test_api_server.py  test_app_helpers.py  test_app_settings.py  test_app_state_lifespan.py  test_calculator_whitelist.py  test_chat_enhance_router.py  test_chat_history_loader.py  test_chat_stream_cancellation.py  test_compose_utils.py  test_config.py  test_conftest_shared_fixtures.py  test_context_compactor.py  test_conversations_thread_id.py  test_crisis_guardrail.py  test_dag_classifier_confidence.py  test_dag_inter_node_summarization.py  test_dag_lint.py  test_dag_per_edge_pass_config.py  test_dangerous_tool_per_call.py  test_db_pragmas.py  test_edit_prompt_enhancer_regression.py  test_editor_archive_on_close.py  test_editor_blend_with_previous.py  test_editor_compare_metrics.py  test_editor_mask_composite.py  test_editor_metrics_cache.py  test_editor_preset_export_import.py  test_editor_preset_schema.py  test_editor_session_ttl_cleanup.py  test_editor_user_presets.py  test_endpoint_naming_drift_lint.py  test_file_ops_security.py  test_hf_progress_per_byte.py  (+80 more)
tests/eval/: test_edit_prompt_enhancer_real_llm.py
(+83 files in other folders)
