[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-langchain-platform"
version = "0.1.0"
description = "Starter UI + backend for LangChain agents powered by Ollama."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Local AI Team" }]
dependencies = [
  # ── Core Framework ──
  "gradio>=5.0.0",
  "langchain>=0.3.27",
  "langchain-core>=0.3.66",
  "langchain-ollama>=0.2.3",
  "langchain-community>=0.3.27",
  "langchain-text-splitters>=0.3.8",
  "langgraph>=0.2.74",
  "pydantic>=2.7.0",
  "ollama>=0.4.0",
  # ── API Server ──
  "fastapi>=0.115.12",
  "uvicorn>=0.30.6",
  # ── HuggingFace + Transformers ──
  "langchain-huggingface>=0.1.2",
  "transformers>=4.45.0",
  "accelerate>=0.34.0",
  "huggingface-hub[hf_xet]>=0.30.0",
  "safetensors>=0.4.0",
  # ── Image Generation (diffusers pipeline) ──
  "diffusers>=0.30.0",
  "Pillow>=10.0.0",
  # ── Document / Data ──
  "pypdf>=5.0.0",
  "aiosqlite>=0.20.0",
  "aiohttp>=3.9.0",
  "tiktoken>=0.7.0",
  # ── Search ──
  "tavily-python>=0.5.0",
  "langchain-tavily>=0.1.5",
  # ── MCP ──
  "langchain-mcp-adapters>=0.1.9",
  # ── System Monitoring ──
  "psutil>=5.9.0",
  "py-cpuinfo>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
# Image generation optimizations (all optional — graceful fallback if missing)
images = [
  "tomesd>=0.1.3",                    # Token Merging: 1.3-1.8x UNet speedup
  "DeepCache>=0.1.1",                 # Feature caching: 2.3x UNet speedup (20+ steps)
  "controlnet-aux>=0.0.9",            # ControlNet preprocessors (canny, depth, pose, etc.)
  "mediapipe==0.10.14",               # Required by controlnet-aux (pinned: 0.10.33 breaks it)
  "triton-windows>=3.2.0; sys_platform == 'win32'",  # torch.compile on CUDA (Windows)
]
# Intel CPU acceleration (2-4x faster inference on Intel CPUs)
openvino = [
  "optimum-intel>=1.20.0",
  "openvino>=2024.0.0",
]
# All optional packages combined
all = [
  "local-ai-langchain-platform[images,openvino]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
