[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-langchain-platform"
version = "0.1.0"
description = "Starter UI + backend for LangChain agents powered by Ollama."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Local AI Team" }]
dependencies = [
  # ── PyTorch (required — for GPU, install FIRST with CUDA index URL) ──
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "torchaudio>=2.1.0",
  # ── Core Framework ──
  "gradio>=5.0.0",
  "langchain>=0.3.27",
  "langchain-core>=0.3.66",
  "langchain-ollama>=0.2.3",
  "langchain-community>=0.3.27",
  "langchain-text-splitters>=0.3.8",
  "langgraph>=0.2.74",
  "pydantic>=2.7.0",
  "ollama>=0.4.0",
  # ── API Server ──
  "fastapi>=0.115.12",
  "uvicorn>=0.30.6",
  # ── HuggingFace + Transformers ──
  "langchain-huggingface>=0.1.2",
  "transformers>=4.45.0",
  "accelerate>=0.34.0",
  "huggingface-hub[hf_xet]>=0.30.0",
  "safetensors>=0.4.0",
  # ── Image Generation (diffusers pipeline) ──
  "diffusers>=0.30.0",
  "Pillow>=10.0.0",
  # ── Document / Data ──
  "pypdf>=5.0.0",
  "aiosqlite>=0.20.0",
  "aiohttp>=3.9.0",
  "tiktoken>=0.7.0",
  # ── Search ──
  "tavily-python>=0.5.0",
  "langchain-tavily>=0.1.5",
  # ── MCP ──
  "langchain-mcp-adapters>=0.1.9",
  # ── System Monitoring ──
  "psutil>=5.9.0",
  "py-cpuinfo>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
# ── High-performance GGUF inference (llama.cpp with CUDA) ──
# NOTE: For GPU support, install with:
#   pip install llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu121
llamacpp = [
  "llama-cpp-python>=0.3.2",          # Direct GGUF inference: Q2-Q8, GPU offload, FlashAttention
]
# ── 4-bit quantized inference via bitsandbytes (NF4/GPTQ loading) ──
quantized = [
  "bitsandbytes>=0.44.0",             # NF4/INT8 quantization: 4x memory reduction
  "auto-gptq>=0.7.0",                 # GPTQ quantized model loading
  "autoawq>=0.2.0",                   # AWQ quantized model loading
]
# ── ExLlamaV2: fastest GPU-only quantized inference ──
exllama = [
  "exllamav2>=0.3.0",                 # EXL2/GPTQ inference: 2-8 bpw mixed quantization
]
# ── ONNX Runtime for CPU/DirectML inference (Windows-optimized) ──
onnx = [
  "onnxruntime-genai-directml>=0.12.0; sys_platform == 'win32'",  # DirectML GPU on Windows
  "onnxruntime>=1.19.0",              # CPU optimized inference (AVX2/AVX-512 kernels)
  "optimum>=1.21.0",                  # HuggingFace ONNX export + optimization
]
# ── FlashAttention-2 (NVIDIA GPU, compute capability 8.0+) ──
# NOTE: Best installed via prebuilt wheel from https://flashattn.dev
flash = [
  "flash-attn>=2.6.0",                # Fused attention: 2-4x speedup, enables longer context
]
# ── TurboQuant KV cache compression (3-bit, ~6x memory reduction) ──
turboquant = [
  "turboquant-torch>=0.4.0",          # Google TurboQuant (ICLR 2026): 3-bit KV cache, zero calibration
]
# ── Speculative decoding support (draft model acceleration) ──
speculative = [
  "transformers>=4.45.0",             # Assisted generation / speculative decoding built-in
  "accelerate>=0.34.0",               # device_map="auto" for hybrid CPU/GPU offload
]
# Image generation optimizations (all optional — graceful fallback if missing)
images = [
  "tomesd>=0.1.3",                    # Token Merging: 1.3-1.8x UNet speedup
  "DeepCache>=0.1.1",                 # Feature caching: 2.3x UNet speedup (20+ steps)
  "controlnet-aux>=0.0.9",            # ControlNet preprocessors (canny, depth, pose, etc.)
  "mediapipe==0.10.14",               # Required by controlnet-aux (pinned: 0.10.33 breaks it)
  "triton-windows>=3.2.0; sys_platform == 'win32'",  # torch.compile on CUDA (Windows)
]
# Intel CPU acceleration (2-4x faster inference on Intel CPUs)
openvino = [
  "optimum-intel>=1.20.0",
  "openvino>=2024.0.0",
]
# ── All performance packages combined ──
perf = [
  "local-ai-langchain-platform[llamacpp,quantized,flash,speculative,turboquant]",
]
# All optional packages combined
all = [
  "local-ai-langchain-platform[perf,images,onnx,openvino]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
